--- a/main.css
+++ b/main.css
@@ -42,11 +42,25 @@ body {
   }
   
   .description h1 {
-    color: #6ab446;
+    color: #27cb53;
+    font-size: 30px;
+    font-family: 'Josefin Sans', sans-serif;
   }
   
   .description p {
     color: #fff;
     font-size: 1.3rem;
     line-height: 1.5;
+  }
+
+  .description h2{
+    color: #ffffff;
+    font-size: 25px;
+    font-family: 'Josefin Sans', sans-serif;
+  }
+
+  .description h3{
+    color: #ffffff;
+    font-size: 20px;
+    font-family: 'Josefin Sans', sans-serif;
   }
