--- a/main.css
+++ b/main.css
@@ -64,3 +64,42 @@ body {
     font-size: 20px;
     font-family: 'Josefin Sans', sans-serif;
   }
+
+  .description h4{
+    color: #ff902e;
+    font-size: 25px;
+    font-family: 'Josefin Sans', sans-serif;
+    margin: 0;
+  }
+
+  .btn{
+    background-color: #ff902e;
+    font: #000000;
+    font-size: 20px;
+    font-family: 'Josefin Sans', sans-serif;
+  }
+
+  .btn:hover{
+    background-color: #ffffff;
+    font: #000000;
+    font-size: 19px;
+    font-family: 'Josefin Sans', sans-serif;
+    border-color: #ff902e;
+    border-style: solid;
+    border-width: 3px;
+
+  }
+
+  a {
+    color:#ffffff;
+    font-size: 22px;
+    font-family: 'Josefin Sans', sans-serif;
+  }
+
+  a:hover{
+    color:#ffffff;
+    font-size: 22px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-style: underline;
+  }
+
