--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ body {
     font-family: 'Josefin Sans', sans-serif;
   }
 
-  .description h4{
+  .h4{
     color: #ff902e;
     font-size: 25px;
     font-family: 'Josefin Sans', sans-serif;
