--- a/main.css
+++ b/main.css
@@ -64,13 +64,6 @@ body {
     font-family: 'Josefin Sans', sans-serif;
   }
  
-  .h4{
-    color: #ff902e;
-    font-size: 25px;
-    font-family: 'Josefin Sans', sans-serif;
-    margin: 0;
-  }
- 
   .btn{
     background-color: #ff902e;
     font: #000000;
@@ -89,15 +82,22 @@ body {
  
   }
  
-  .quick-find a {
+  .quick a {
     color:#ffffff;
     font-size: 22px;
     font-family: 'Josefin Sans', sans-serif;
   }
  
-  .quick-find a:hover{
+  .quick a:hover{
     color:#ffffff;
     font-size: 22px;
     font-family: 'Josefin Sans', sans-serif;
     font-style: underline;
+  }
+
+  .quick h4{
+    color: #ff902e;
+    font-size: 25px;
+    font-family: 'Josefin Sans', sans-serif;
+    margin: 0;
   }
