--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
+
 body {
     padding: 0;
     margin: 0;
     background: #000000;
   }
   
-  /*--- navigation bar ---*/
+  /*---
 
   .navbar {
     background:#343434;
@@ -101,3 +102,4 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     margin: 0;
   }
+  ---*\
