--- a/test.css
+++ b/test.css
@@ -10,33 +10,59 @@ body {
     background-color: #343434;
 }
 
+.navbar img {
+  margin-top: 5px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  height: 50px;
+}
+
 .nav-link {
     color: #27cb53;
     cursor: pointer;
     margin-right: 15px;
     font-size: 25px;
     font-family: 'Josefin Sans', sans-serif;
-  }
+}
     
-  .nav-link:hover {
-    color: #ffffff;
-    cursor: pointer;
-    margin-right: 15px;
-    font-size: 25px;
-    font-family: 'Josefin Sans', sans-serif;
-  }
-  
-  .navbar-collapse {
-    justify-content: flex-end;
-  }
+.nav-link:hover {
+  color: #ffffff;
+  cursor: pointer;
+  margin-right: 15px;
+  font-size: 25px;
+  font-family: 'Josefin Sans', sans-serif;
+}
 
-  .navbar img {
-    margin-top: 5px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    height: 50px;
-  }
+.login {
+  display: inline-block;
+  padding: 8px 15px;
+  font-size: 20px;
+  font-family: 'Josefin Sans', sans-serif;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  font: #000;
+  background-color: #27cb53;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 7px #999;
+}
+
+.login:hover {
+  background-color: #1fab44;
+}
+  
+.login:active {
+  background-color: #1fab44;
+  box-shadow: 0 3px #666;
+  transform: translateY(4px);
+}
+  
+.navbar-collapse {
+  justify-content: flex-end;
+}  
 
   /*---carosal images---*/
 
@@ -47,10 +73,10 @@ body {
 
 /*--- Heading ---*/
 
-.description{ 
+.description { 
     text-align: center;
     align-items: center;
-    padding-top: 30px;
+    padding: 30px 10px 10px 10px;
 }
 
 .description h1 {
@@ -59,39 +85,96 @@ body {
   font-family: 'Josefin Sans', sans-serif;
 }
 
-.btn{
+.register {
   background-color: #ff902e;
   font: #000000;
   font-size: 20px;
   font-family: 'Josefin Sans', sans-serif;
+  display: inline-block;
+  border-radius: 4px;
+  border: none;
+  text-align: center;
+  padding: 10px;
+  width: 180px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
 
-.btn:hover{
-  background-color: #ffffff;
-  font: #000000;
-  font-size: 18px;
-  font-family: 'Josefin Sans', sans-serif;
-  border-color: #ff902e;
-  border-style: solid;
-  border-width: 3px;
-
+.register span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
 }
+
+.register span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.register:hover span {
+  padding-right: 25px;
+}
+
+.register:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+/*--- Subheading ---*/
 
 .specs {
-    padding: 10px;
+    padding: 30px 10px 10px 10px;
     text-align: center;
     align-items: center;
-  
 }
+
+.specs h2 {
+  color: #ffffff;
+  font-size: 25px;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.specs h3 {
+  color: #ffffff;
+  font-size: 20px;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+/*--- Links to information---*/
 
 .quick {
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
     text-align: center;
     align-items: center;
 }
 
+.quick h4 {
+  color: #ff902e;
+  font-size: 27px;
+  font-family: 'Josefin Sans', sans-serif;
+  margin: 0;
+}
+
+.quick a {
+  color:#ffffff;
+  font-size: 20px;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.quick a:hover{
+  font-style: underline;
+}
+
+/*--- Information about the event---*/
+
 .info {
-    padding: 10px;
+    padding: 10px 20px;
     text-align: center;
     align-items: center;
     word-wrap: break-word;
