--- a/test.css
+++ b/test.css
@@ -196,7 +196,7 @@ body {
 
 .footer {
   margin: 0px;
-  padding-top: 20px;;
+  padding-top: 20px;
   text-align: left;
   align-items: left;
   word-wrap: break-word;
@@ -215,7 +215,13 @@ body {
 }
 
 .footer img {
-  border: 1px #343434;
+  height: 50ps;
+  margin: 5px;
+}
+
+.credits {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .credits img {
@@ -224,6 +230,21 @@ body {
   margin-left: 0px;
   margin-right: 0px;
   height: 50px;
+}
+
+.social img {
+  margin-top: 5px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  height: 20px;
+}
+
+.copyright h2 {
+  font-size: 10px;
+  color:#ffffff;
+  font-family: 'Josefin Sans', sans-serif;
+  word-wrap: break-word;
 }
 
 
