--- a/main.css
+++ b/main.css
@@ -35,6 +35,11 @@ font-size: 25px;
 font-family: 'Josefin Sans', sans-serif;
 }
 
+.search img{
+  height: 25px;
+  margin: 15px;
+}
+
 .login {
 display: inline-block;
 padding: 8px 15px;
