--- a/main.css
+++ b/main.css
@@ -5,6 +5,20 @@ body {
   background: #000000;
 }
 
+/*--- For mobile ---*/
+
+@media (max-width: 575.98px) {
+  .login {
+    margin-bottom: 10px;
+  }
+
+  .footer {
+    margin-left: 5px;
+  }
+
+
+}
+
 /*--- Navigation bar ---*/
 
 .navbar {
@@ -235,7 +249,7 @@ margin-top: 5px;
 margin-bottom: 0px;
 margin-left: 0px;
 margin-right: 0px;
-height: 40px;
+height: 70px;
 }
 
 .copyright h2 {
