--- a/main.css
+++ b/main.css
@@ -16,6 +16,9 @@ body {
     margin-left: 5px;
   }
 
+  .footer img {
+    height: 50px;
+  }
 
 }
 
@@ -249,7 +252,7 @@ margin-top: 5px;
 margin-bottom: 0px;
 margin-left: 0px;
 margin-right: 0px;
-height: 70px;
+height: 40px;
 }
 
 .copyright h2 {
