--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 
 @media (max-width: 575.98px) {
   .nav-item {
-    margin: 10px;
+    margin: 5px;
   }
 
   .nav img {
@@ -17,7 +17,7 @@ body {
   }
   
   .login {
-    margin: 10px;
+    margin-bottom: 15px;
   }
 
   .footer img {
